# al_analysis

./: .gitignore  PN2KC_DBSCAN_Clustering.py  PNKC_claw_plots_dif_color.py  README.md  TODO.txt  al_analysis.py  al_pair_grids.py  al_util.py  analyze_ann_outputs.py  backup_ijrois.py  build-requirements.txt  common-requirements.txt  dev-requirements.txt  environment.yml  exact-requirements.txt  exact_requirements.txt  hong_logging.py  https-hong-requirements.txt  install.sh  load_antennal_csv.py  manual_ijroi_notes.txt  mb_model.py  model_test.py  pip_exact_requirements.txt  plot_roi.py  plot_roi_util.py  pn_convergence_vs_hallem_corr.py  pyproject.toml  remy_natmix_corrs.py  reproducing.md  requirements.txt  s2p_test.py  test.py  unsure_s2p_rois.yaml  volumetric_responses.py
al_analysis/: al_analysis.py  al_util.py  load_antennal_csv.py  logging.py  mb_model.py  plot_roi.py  plot_roi_util.py
al_analysis/data/: PNtoKC_connections_raw.xlsx
al_analysis/data/ann_model_outputs/: kcs.csv
al_analysis/data/from_george/: AL_panel_george_fly_trial.csv
al_analysis/data/internal/: dff2spiking_model_input.csv  dff2spiking_model_input.parquet  kiwi-control_mean_est_spike_deltas.csv  kiwi-control_mean_est_spike_deltas__binaries-mixdilutions-pfo-dropped.csv  validation2_mean_est_spike_deltas.csv
al_analysis/data/sent_to_remy/: TODO.txt
data/: README.md  rdm_concat__kc_soma__megamat__mean_peak__correlation__trialavg.nc
data/ann_model_outputs/: kc_corr.csv  orn_corr.csv  orn_deltas.csv
data/from_anoop/megamat_dmats/: KC_mod_un_dmat.csv  fly0_meg_dmat.csv  fly0_val_dmat.csv  fly1_meg_dmat.csv  fly1_unscaled_val_dmat.csv  fly2_meg_dmat.csv  fly2_unscaled_val_dmat.csv  fly2_val_dmat.csv  fly3_unscaled_meg_dmat.csv  fly3_val_dmat.csv  fly4_unscaled_meg_dmat.csv  fly4_unscaled_val_dmat.csv  fly6_meg_dmat.csv  fly7_meg_dmat.csv  fly7_unscaled_meg_dmat.csv  fly8_meg_dmat.csv  trial0_KC_dmat.csv
data/from_george/: diag_AL_panel_george_fly_trial.csv
data/from_pratyush/2024-09-13/: FlyWire_PNKC_Left.csv  FlyWire_PNKC_Right.csv
data/from_pratyush/2025-04-03/: KC2APL_Connectivity.csv  README.md
data/from_pratyush/2025-04-24/: APL2KC_Synapse_Locations.csv  PN2KC_Connectivity.csv  README.md
data/from_pratyush/2025-08-20/: .gitignore  PN-KC_Connectivity_Claws.parquet  PN-KC_Connectivity_SynDist-Scaled.csv
data/from_pratyush/2025-09-17/: APL_Connectors_Raw.csv  KC_Claw_Counts.csv  PN-to-APL.csv
data/from_pratyush/2025-09-24/: .gitignore  APL-to-KC_with_Synapses_v3.parquet  APL-to_PN_with_Synapses_v3.parquet  APL_Assignments.parquet  KC-to_APL_with_Synapses_v3.parquet  PN-to_APL_with_Synapses_v3.parquet
data/from_pratyush/2025-12-05/: .gitignore  APLunit-to-KCclaw_Connectivity_2025-12-14-21-12-48.parquet  APLunit-to-MBC1unit_Connectivity_2025-12-05-13-39-22.parquet  KC_Claw_Counts_Hemibrain_2025-12-05-13-39-22.csv  KC_Claw_Counts_Hemibrain_2025-12-09-19-47-36.csv  KCclaw-to-APLunit_Connectivity_2025-12-05-13-39-22.parquet  KCclaw-to-KCclaw_Connectivity_2025-12-09-19-47-36.parquet  KCclaw-to-MBC1unit_Connectivity_2025-12-09-19-47-36.parquet  MB-C1_Pairwise_UNIT_Distances_2025-12-05-13-39-22.parquet  MBC1unit-to-KCclaw_Connectivity_2025-12-09-19-47-36.parquet  MBC1unit-to-PNbouton_Connectivity_2025-12-05-13-39-22.parquet  PN_Synapse_Assignments_Hemibrain_2025-12-05-13-39-22.parquet  PNbouton-to-APLunit_Connectivity_2025-12-05-13-39-22.parquet  PNbouton-to-MBC1unit_Connectivity_2025-12-05-13-39-22.parquet
data/from_remy/2024-06-05/: validation2.xlsx
data/from_remy/2024-11-12/: xrda_stim_rdm_concat__iscell_good_xid0__correlation.nc
data/from_remy/natmix/: da_corrs.nc
data/internal/: dff2spiking_model_choices.csv  megamat_mean_est_spike_deltas.csv
data/internal/for_dff_to_spiking_fn/: ij_certain-roi_stats.csv  ij_certain-roi_stats.p  ij_roi_stats.p  roi_best_plane_depths.parquet
data/remy_response_rates/refstim__ep_at_-3.0__median__0.120-0.130/: df_acqs.csv  df_sparsity_recomputed.pkl
data/sent_to_anoop/: TODO.txt
data/sent_to_anoop/2024-05-16/: megamat_uniform_model_params.csv
data/sent_to_anoop/v1/: validation2_csvinfo.txt
data/sent_to_anoop/v2/: megamat_hemibrain_model_responses.csv
data/sent_to_grant/2024-04-05/: README.md
data/sent_to_nikola/2025-02-25/: odor_metadata.csv
data/sent_to_remy/2023-01-06/: GH146_ij_roi_stats.p  README.md
data/sent_to_remy/2023-10-29/: GH146_ij_certain-roi_stats.csv  pebbled_ij_certain-roi_stats.p
data/sent_to_remy/2024-01-12/: validation2_ij_certain-roi_stats.csv
data/sent_to_remy/2025-02-19/: validation2_hemibrain_model_params.csv  validation2_hemibrain_model_wPNKC.csv  validation2_hemidraw_model_params.csv
data/sent_to_vlad/2024-06-21/: consensus_n_per_odor_and_glom.p  consensus_stddev.p  odor_metadata.csv
megamat_chem_dists/: .gitignore  ChemDe_Info_dist.csv  megamat_odor_dists.py
megamat_chem_dists/schmuker/: Inchis with odor fragment descriptors - no nans-1.csv  Inchis with odor fragment descriptors-1.csv  Schmuker - Substructure features-1.docx  df_smart_descriptors_nonans_with_inchis_and_odor_names.xlsx  schmuker_no_nans.csv
scripts/: .gitignore  2024_kiwi_control_roi_data.csv  analyze_model_banana_iaa_concs.py  benchmark_xarray_io.py  binary_mix_and_component_mean_intensity.py  boost_apl_megamat_model_multiresponders.py  check_2025_data_for_nikola.py  check_curr_csvs_match_paper.py  check_dfs.py  check_model_corrs.py  compare_matt_and_new_hemibrain_wPNKC.py  copy_sens_analysis_plots.py  corr_orn_pn_vcf.py  model_banana_iaa_concs.py  model_george_valence_panel.py  model_private_odors_for_kai_grant.py  model_yang_mixtures.py  mono_nat_ramp_cond_IaA_Ban.csv  mv_plots.py  recompute_traces_from_remy_s2p_rois.py  sim_hh_kcs.py  step_model_pn_apl.py
test/: conftest.py  generate_reference_outputs_for_repro.py  test_al_analysis.py  test_al_util.py  test_mb_model.py
test/test_data/: bounding_frames.json  kiwi-control-multiresponder-mask.csv  odor_lists.json  traces.csv
test_scripts/: .gitignore  check_pretuned_vs_not.py  ijroi_test.py  logtest.py  s2p_test.py  test_matshow.py  test_sam_tiffs.py  xarray_masks.py
(+554 files in other folders)
