
[build-system]
# https://packaging.python.org/en/latest/guides/writing-pyproject-toml/
# example had 61.0, but I had 56.0 installe, so replaced w/ that
#
# TODO maybe i should upgrade to 62 (or 64?)? this post seems to say one of those
# required for editable installs to work correctly (seemed ok so far though... not sure
# what is missing...)
# https://stackoverflow.com/questions/69711606
# my current pip version seems to be 22.3.1, so maybe thats why it's working (somewhat)?
requires = ["setuptools >= 56.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# editable installs seem to work fine so far
py-modules = ["al_analysis", "mb_model", "al_util", "hong_logging", "load_antennal_csv"]

[project]
name = "al_analysis"
# required, and not sure if i can set up dynamically from git
version = "0.0.0"
# make this exactly 3.8 (i've been using 3.8.12)?
#requires-python = ">= 3.8"

# TODO reference requirements.txt? how to consolidate? seems that might not let me
# install editable?

# TODO repackage backup_rois.py under here?
[project.scripts]
csvinfo = "load_antennal_csv:csvinfo_cli"
#csvdiff = "load_antennal_csv:csvdiff_cli"

[tool.pytest.ini_options]
# TODO `minversion = "6.0"` (or whichever version. using 8.3.5, but prob doesn't
# matter much)?
#
# could add doctest here. see hong2p/pytest.ini
addopts = "--pdbcls=IPython.terminal.debugger:Pdb --tb=native"
testpaths = [
    "test",
]
