
[build-system]
# 75.3.4 should be max setuptools that 3.8.12 supports
requires = ["setuptools >= 75.3.4"]
build-backend = "setuptools.build_meta"
# TODO should i also be specifying pip / wheel here? (the other things in that section
# of my `savedeps` output. see exact-requirements.txt after ~2026-03-20)

[project]
name = "al_analysis"
# TODO dynamic version too? what does that do?
# required, and not sure if i can set up dynamically from git
version = "0.0.0"
# TODO try to get working w/ newer pythons (or test some dependencies w/ them first,
# probably starting w/ just build of olfsysm)
# make this exactly 3.8 (i've been using 3.8.12)?
requires-python = ">= 3.8"
dynamic = ["dependencies"]
readme = "README.md"

[tool.setuptools]
# editable installs seem to work fine so far
py-modules = ["al_analysis", "mb_model", "al_util", "hong_logging", "load_antennal_csv",
    # TODO TODO change name of scripts dir so this isn't installing a global "scripts"
    # package. move everything under an al_analysis package dir, including scripts? any
    # other way to change name of package this is under, or directly provide the module
    # w/o a containing package?
    # TODO could consolidate all scripts / CLI entrypoints in one dir?
    "scripts.step_model_pn_apl"
]

[tool.setuptools.dynamic]
# NOTE: this can not use -r / -e in lines in those files, which would prevent some of
# the old approaches I took (but could just have separate parallel files to install
# certain sets of custom things, if I really want)
dependencies = {file = "exact-requirements.txt"}

# TODO reference requirements.txt? how to consolidate? seems that might not let me
# install editable?

# TODO repackage backup_rois.py under here?
[project.scripts]
csvinfo = "load_antennal_csv:csvinfo_cli"
# TODO delete?
#csvdiff = "load_antennal_csv:csvdiff_cli"

plot-dynamics = "mb_model:load_and_plot_dynamics_cli"

# doesn't seem we need an __init__.py in scripts/ or anything
# ah, but just b/c pip completed the install (w/o 'scripts.' prefix here), doesn't mean
# this will run. script it generated seems to be garbage (though i didn't try running
# it...). now that i've added scripts.step_model_pn_apl to modules list above, should
# work, although don't love the global 'scripts' package name.
# DO need the "scripts." prefix, despite "scripts.step_model_pn_apl" being listed in
# py-modules above
step_model_pn_apl = "scripts.step_model_pn_apl:main"

[tool.pytest.ini_options]
# TODO `minversion = "6.0"` (or whichever version. using 8.3.5, but prob doesn't
# matter much)? (for what? delete?)
minversion = "8.3.5"
#
# TODO -q already imply --no-header (not clear from -h output)?
# may want some of other opts to reduce output (no summary?)
# TODO some way to get --pdb non-capturing on breakpoints, but don't drop in to
# post-mortem debugger ever?
# TODO is there some way to quit out of all tests when exiting a breakpoint
# encountered on one test (e.g. via Ctrl-D)? (just run pytest w/ -x?)
#
# NOTE: will still likely need -s, as currently configured, if breakpoint i want to stop
# at is an explicit ipdb.set_trace() (or probably even breakpoint()/pdb.set_trace())
# internal to one of the tests. I think capturing is only disabled automatically if
# breakpoint()/pdb.set_trace() (and not ipdb.set_trace()) is called from directly within
# one of the test functions (--pdb may also? not sure how that interacts w/ using
# ipdb.set_trace()).
#
# how does pdbcls interact w/ PYTHONBREAKPOINT? if PYTHONBREAKPOINT=ipdb.set_trace,
# breakpoint() in a test will no longer automatically disable capturing (need to pass
# -s). without this env var set, both breakpoint() and pdb.set_trace() will
# automatically disable capturing.
# TODO try using conftest.py to manipulate os.environ based on ipython / ipdb
# availability? may not be able to directly manipulate environ there; instead may need
# something like: https://stackoverflow.com/questions/71418185/
#
# NOTE: --pdbcls=IPython.terminal.debugger:Pdb seems to not require ipdb installed,
# despite the debug interface seeming the same to me (it may require ipython installed,
# which is probably heavier. may prefer to find a way to reference ipdb itself?)
#
# TODO any reason NOT to just always -s (--capture=no)? could capture actually be
# useful for me, other than to just suppress output?
# TODO if ipdb is installed and configured w/ PYTHONBREAKPOINT, does this pdbcls
# override that? what happens if ipython (or however we got IPython.terminal.debugger)
# use this?
#
# TODO are -q and -vv at odds? i want to see name of test being run, but otherwise
# want less output
#
# NOTE: seems we must use :TerminalPdb instead of :Pdb, in order for tab complete to
# work
#
# could add doctest here. see hong2p/pytest.ini
addopts = "--no-header -q --tb=short --pdbcls=IPython.terminal.debugger:TerminalPdb -s -vv"
testpaths = [
    "test",
]
# TODO try instead keeping some on failure (as long as we also exit on failure?)? w/
# extra config to more aggressively clear the cache dir?
#
# pytest's builtin tmp_path fixture will create temp dirs under /tmp/pytest-of-<user>,
# and default retention policy ("all") does not clear their contents. The "none"
# retention policy will remove all of these temp dirs after test completion, regardless
# of test failure/success.
#
# Setting this to prevent disk space issues caused by just a few runs of
# test_mb_model.py (where system is not restarted in between, which would clear /tmp).
# NOTE: override by adding `-o tmp_path_retention_policy=all` to pytest CLI args.
tmp_path_retention_policy = "none"
# TODO try adding pytest-checkipdb? (seems like it's basically a linter to remind you of
# straggling breakpoints? just use a linter for that instead?)
filterwarnings = [
    # xarray==0.19 with modern setuptools (probably anything more recent than about
    # 60-64) will cause these warnings when pytest is collecting tests
    'ignore:distutils Version classes are deprecated. Use packaging.version instead.:DeprecationWarning',
    'ignore:pkg_resources is deprecated as an API.:DeprecationWarning',
    'ignore:Deprecated call to `pkg_resources.declare_namespace:DeprecationWarning',
]
